# vbt_clinic

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  test_determinism.py
Results/: script.py  test_run_sweep_cpu.py
dataset/: lengths_with_sero_and_dopa.csv  weights_with_sero_and_dopa.csv
src/: __init__.py  analysis.py  bold_delay_cpu.py  bold_delay_gpu.py  bold_delay_utils.py  core_jax.py  core_np.py  gast_model.py  helpers_dopa.py  inference.py  make_jp_runsim_explanation.md  utils.py
