[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.1.0"
description = "A minimal Python package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.17.0",
    "pandas>=2.0",
    "matplotlib>=3.0",
    "seaborn>=0.13.0",
    "jax>=0.4.28",
    "jaxlib>=0.4.28",
    "jax-cuda12-plugin>=0.4.28",
    "jax-cuda12-pjrt>=0.4.28",
    "torch>=2.0",
    "pymc>=5.0",
    "arviz>=0.23.0",
    "sbi>=0.25.0",
    "scikit-learn>=1.0",
    "h5py>=3.0",
    "xarray>=2025.0",
    "nibabel>=5.0",
    "nilearn>=0.13.0",
    "tqdm>=4.60",
    "vbjax"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "flake8",
]

[tool.setuptools]
packages = ["src"]
include-package-data = true

[tool.setuptools.package-data]
src = ["../dataset/*", "../dataset/**/*"]
